table overflow fix and alert downsample to avg-5m

--- a/public/less/graph.less
+++ b/public/less/graph.less
@@ -64,6 +64,12 @@
   width: 100%;
   margin: 0;
 
+  tbody {
+    display: block;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
   .graph-legend-series {
     display: table-row;
     float: none;
